--- a/backend.yaml
+++ b/backend.yaml
@@ -21,7 +21,7 @@ spec:
         persistentVolumeClaim:
           claimName: db-pvc1
       containers:  
-      - image: mysql:5.6
+      - image: mysql
         name: mysql
         env:
         - name: MYSQL_ROOT_PASSWORD
