--- a/frontend.yaml
+++ b/frontend.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: wordpress
-        image: wordpress:4.8-apache
+        image: wordpress
         ports:
         - containerPort: 80
           protocol: TCP
